--- a/app/src/main/res/layout/list_item_kampus.xml
+++ b/app/src/main/res/layout/list_item_kampus.xml
@@ -2,14 +2,18 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_margin="6dp"
-    android:elevation="32dp">
+    android:elevation="32dp"
+    app:cardCornerRadius="16dp"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="6dp"
-        android:orientation="vertical">
+        android:padding="12dp"
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/tv_id"
@@ -22,28 +26,34 @@
             android:id="@+id/tv_nama"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Nama"/>
+            android:text="Nama"
+            android:textSize="20sp"
+            android:textStyle="bold"/>
 
         <TextView
             android:id="@+id/tv_kota"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Kota"/>
+            android:text="Kota"
+            android:textSize="17sp"/>
 
         <TextView
             android:id="@+id/tv_alamat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Alamat"
-            android:textStyle="bold"
+            android:textSize="17sp"
+            android:maxLines="2"
+            android:ellipsize="end"
             android:justificationMode="inter_word"/>
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:layout_weight="2"
             android:layout_marginTop="6dp"
+            android:layout_gravity="right"
             >
 
             <Button
